[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/main_menu_sprites/exit.png" type="Texture" id=2]
[ext_resource path="res://Sprites/main_menu_sprites/question p.png" type="Texture" id=3]
[ext_resource path="res://Sprites/main_menu_sprites/robot.png" type="Texture" id=4]
[ext_resource path="res://Sprites/main_menu_sprites/my_ach.png" type="Texture" id=5]
[ext_resource path="res://Sprites/main_menu_sprites/question.png" type="Texture" id=6]
[ext_resource path="res://Sprites/main_menu_sprites/start_gm_p.png" type="Texture" id=7]
[ext_resource path="res://Sprites/main_menu_sprites/list.png" type="Texture" id=8]
[ext_resource path="res://Sprites/main_menu_sprites/bakground.png" type="Texture" id=9]
[ext_resource path="res://Sprites/main_menu_sprites/my_ach_p.png" type="Texture" id=10]
[ext_resource path="res://Sprites/main_menu_sprites/start_gm.png" type="Texture" id=11]
[ext_resource path="res://Sprites/main_menu_sprites/exit_p.png" type="Texture" id=12]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Fonts/RubikOne-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Sprites/main_menu_sprites/about.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0.0509804, 0.545098, 1, 1 )
font_data = ExtResource( 13 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Baсkground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -0.118061
texture = ExtResource( 9 )
expand = true

[node name="Card" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -569.0
margin_top = -184.0
margin_right = 679.0
margin_bottom = 454.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Card"]
margin_left = 367.0
margin_top = 97.0
margin_right = 643.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 1 )
text = "obot
Arm"

[node name="TextureRect" type="TextureRect" parent="Card"]
margin_left = 104.0
margin_top = 89.0
margin_right = 361.0
margin_bottom = 363.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Card"]
anchor_left = 0.56
anchor_top = 0.202
anchor_right = 0.606
anchor_bottom = 0.239
margin_right = 327.592
margin_bottom = 194.394

[node name="StartGame" type="TextureButton" parent="Card/VBoxContainer"]
margin_right = 385.0
margin_bottom = 70.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 7 )

[node name="MyAchievs" type="TextureButton" parent="Card/VBoxContainer"]
margin_top = 74.0
margin_right = 385.0
margin_bottom = 144.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )

[node name="Exit" type="TextureButton" parent="Card/VBoxContainer"]
margin_top = 148.0
margin_right = 385.0
margin_bottom = 218.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 12 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -305.0
margin_top = 43.0
margin_right = -23.0
margin_bottom = 310.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )

[node name="WindowDialog" type="WindowDialog" parent="."]
self_modulate = Color( 0.0823529, 0.145098, 0.333333, 1 )
margin_left = 390.0
margin_top = 242.0
margin_right = 1396.0
margin_bottom = 694.0
custom_colors/title_color = Color( 0.752941, 0.137255, 0.137255, 1 )
custom_fonts/title_font = SubResource( 4 )
popup_exclusive = true
window_title = "Об игре"

[node name="TextureRect" type="TextureRect" parent="WindowDialog"]
margin_left = -8.0
margin_top = -1.0
margin_right = 1121.0
margin_bottom = 522.0
texture = ExtResource( 15 )

[node name="text" type="Label" parent="WindowDialog"]
margin_left = 100.0
margin_top = 93.0
margin_right = 725.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = " Управляйте робо-рукой, чтобы помочь предприятию оптимизировать производство автомобилей. Проходите разнообразные уровни и 
получайте вознаграждение."
align = 1
autowrap = true

[node name="blue text" type="Label" parent="WindowDialog"]
margin_left = 177.0
margin_top = 310.0
margin_right = 656.0
margin_bottom = 341.0
custom_colors/font_color = Color( 0.0509804, 0.545098, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Игра разработана группой студентов СФУ"
autowrap = true

[connection signal="pressed" from="Card/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Card/VBoxContainer/MyAchievs" to="." method="_on_MyAchievs_pressed"]
[connection signal="pressed" from="Card/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
